Prevent selectors from flickering during page load

--- a/styles/global.css
+++ b/styles/global.css
@@ -16,3 +16,21 @@
 .tippy-content {
   @apply p-0 !important;
 }
+
+/* React Select dark mode overrides */
+.dark .rs__control {
+  @apply bg-neutral-600;
+  border-color: rgb(51, 51, 51);
+}
+
+.dark .rs__single-value {
+  color: rgb(204, 204, 204);
+}
+
+.dark .rs__indicator-separator {
+  background-color: rgb(51, 51, 51);
+}
+
+.dark .rs__dropdown-indicator {
+  color: rgb(51, 51, 51);
+}
